# linux_monitoring

./: .gitignore  CMakeLists.txt  README.md  compile  install.sh  install_packages.sh  main  main.cpp  require  require.list  settings.json  uninstall.sh
src/: main.cpp
src/assets/: settings.json
